changed controller methods to generic structure
